force-app/main/default/objects/Forrester_SHIR_IP_VIEW__x/Forrester_SHIR_IP_VIEW__x.object-meta.xml
<CustomObject>
    <description>Forrester_SHIR_IP_VIEW</description>
    <externalDataSource>Forrester</externalDataSource>
    <externalName>Forrester_SHIR_IP_VIEW</externalName>
    <label>Patent</label>
    <pluralLabel>Patents</pluralLabel>
</CustomObject>