force-app/main/default/objects/Forrester_SHIR_IP_VIEW__x/fields/COUNTRY_NAME__c.field-meta.xml
<CustomField>
    <fullName>COUNTRY_NAME__c</fullName>
    <description>COUNTRY_NAME</description>
    <externalDeveloperName>COUNTRY_NAME</externalDeveloperName>
    <label>Country</label>
    <length>60</length>
    <type>Text</type>
</CustomField>