force-app/main/default/objects/Forrester_SHIR_IP_VIEW__x/fields/DESIGNATED_COUNTRIES__c.field-meta.xml
<CustomField>
    <fullName>DESIGNATED_COUNTRIES__c</fullName>
    <description>DESIGNATED_COUNTRIES</description>
    <externalDeveloperName>DESIGNATED_COUNTRIES</externalDeveloperName>
    <label>Designated Countries</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>