force-app/main/default/objects/Forrester_SHIR_IP_VIEW__x/fields/IP_STATUS_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>IP_STATUS_DESCRIPTION__c</fullName>
    <description>IP_STATUS_DESCRIPTION</description>
    <externalDeveloperName>IP_STATUS_DESCRIPTION</externalDeveloperName>
    <label>IP Status</label>
    <length>120</length>
    <type>Text</type>
</CustomField>