force-app/main/default/objects/Forrester_SHIR_IP_VIEW__x/fields/IP_TYPE__c.field-meta.xml
<CustomField>
    <fullName>IP_TYPE__c</fullName>
    <description>IP_TYPE</description>
    <externalDeveloperName>IP_TYPE</externalDeveloperName>
    <label>IP Type Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>