force-app/main/default/objects/Forrester_SHIR_IP_VIEW__x/fields/PUB_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>PUB_NUMBER__c</fullName>
    <description>PUB_NUMBER</description>
    <externalDeveloperName>PUB_NUMBER</externalDeveloperName>
    <label>Publication Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>