force-app/main/default/objects/Forrester_SHIR_IP_VIEW__x/fields/SERIAL_NUM__c.field-meta.xml
<CustomField>
    <fullName>SERIAL_NUM__c</fullName>
    <description>SERIAL_NUM</description>
    <externalDeveloperName>SERIAL_NUM</externalDeveloperName>
    <label>Serial Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>